tests/ui/mux/fails_on_empty_input_streams.rs
use mux_stream_macros::mux;

fn main() {
    let _ = async move {
        mux! { }
    };
}
